[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/Basic/KS-Sig.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Resources/Basic/Textures/KS-Signal.png" type="Texture" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/Signal.gd" type="Script" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/Oswald-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Basic/Textures/Black.png" type="Texture" id=5]


[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.992157, 0.0941176, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=6]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="DynamicFont" id=11]
size = 500
font_data = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=12]

[sub_resource type="SpatialMaterial" id=13]
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 12 )

[sub_resource type="QuadMesh" id=14]
size = Vector2( 0.5, 0.6 )

[sub_resource type="ViewportTexture" id=15]

[sub_resource type="SpatialMaterial" id=16]
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 15 )

[node name="Signal" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.67658 )
material_override = SubResource( 2 )
mesh = ExtResource( 1 )
material/0 = null

[node name="Red" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0203973, 4.27763, 1.71823 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="OmniLight3" type="OmniLight" parent="Red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03662, -0.0413442, 0.00553389 )
light_color = Color( 0.984314, 0.0235294, 0.0235294, 1 )
light_energy = 16.0
light_indirect_energy = 0.0
light_specular = 1.0
omni_range = 1.01664

[node name="MeshInstance" type="MeshInstance" parent="Red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = null

[node name="Orange" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00402704, 4.10741, 1.82482 )
visible = false
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="OmniLight2" type="OmniLight" parent="Orange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00402704, -0.0191979, 0.00622515 )
light_color = Color( 0.968627, 1, 0, 1 )
light_energy = 16.0
light_indirect_energy = 0.0
light_specular = 1.0
omni_range = 1.01664

[node name="MeshInstance2" type="MeshInstance" parent="Orange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 6 )
material/0 = null

[node name="Green" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00639483, 4.10783, 1.60503 )
visible = false
material_override = SubResource( 9 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="Green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00639483, -0.0196252, -0.00148034 )
light_color = Color( 0.266667, 1, 0, 1 )
light_energy = 16.0
light_indirect_energy = 0.0
light_specular = 1.0
omni_range = 1.01664

[node name="MeshInstance3" type="MeshInstance" parent="Green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 10 )
mesh = SubResource( 6 )
material/0 = null

[node name="Timer" type="Timer" parent="."]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 600 )
render_target_clear_mode = 2

[node name="Node2D" type="Node2D" parent="Viewport"]
z_as_relative = false

[node name="Sprite" type="Sprite" parent="Viewport/Node2D"]
position = Vector2( 327.093, 387.386 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Viewport/Node2D"]
modulate = Color( 1, 0.470588, 0, 1 )
margin_top = -124.614
margin_right = 498.0
margin_bottom = 617.386
custom_fonts/font = SubResource( 11 )
text = "50"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 500, 600 )
render_target_clear_mode = 2

[node name="Node2D" type="Node2D" parent="Viewport2"]
z_as_relative = false

[node name="Sprite" type="Sprite" parent="Viewport2/Node2D"]
position = Vector2( 327.093, 387.386 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Viewport2/Node2D"]
margin_top = -124.614
margin_right = 498.0
margin_bottom = 617.386
custom_fonts/font = SubResource( 11 )
text = "50"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen1" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.448292, 3.36503, 1.71943 )
visible = false
material_override = SubResource( 13 )
mesh = SubResource( 14 )
material/0 = null

[node name="Screen2" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.0808081, 4.76666, 1.71943 )
visible = false
material_override = SubResource( 16 )
mesh = SubResource( 14 )
material/0 = null
